[package]
name = "actix-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
mqtt-async-client = "0.3.1"
anyhow = "1.0.65"
url = "2.3.1"