[package]
name = "d2dtest"
version = "0.1.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]
direct2d = "0.3.0-alpha1"
dxgi = "0.3.0-alpha4"
math2d = "0.2.0-alpha8"
directwrite = "0.3.0-alpha4"
winit = "0.19.1"
png = "0.14.1"
image = "*"
winapi = { version = "0.3.7", features = ["d2d1", "synchapi"] }